making small adjustments in some css properties

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <h2 class="altSubtitle">Diferentes op&ccedil;&otilde;es &agrave; sua disposi&ccedil;&atilde;o para atender &agrave;s mais diversas necessidades
               de transporte</h2>
           </div>
-          <div class="row inner-page">
+          <div class="row conver-inner-page">
             <div class="col-md-6">
               <img class="img-responsive" src="images/cover/map.png">
             </div>
@@ -406,11 +406,11 @@
                 <br/>
                 <i class="icon-mobile"></i>19 9 9431-2190
                 <br/>
-                <i class="icon-mail"></i>&nbsp;nilsondavan@gmail.com
+                <i class="icon-mail"></i>&nbsp;nilsondavan@hotmail.com
               </p>
             </address>
           </div>
-          <form method="post" action="https://formspree.io/diego.vinciguerra@bivee.com.br" id="contactfrm" role="form">
+          <form method="post" action="https://formspree.io/nilsondavan@hotmail.com" id="contactfrm" role="form">
             <div class="col-sm-4">
               <div class="form-group">
                 <label for="name">Nome</label>
@@ -439,7 +439,7 @@
             </div>
             <div class="col-md-4 col-md-offset-8">
               <div class="result"></div>
-              <button name="submit" type="submit" class="btn btn" id="submit">Enviar</button>
+              <button type="submit" class="btn btn" id="submit">Enviar</button>
             </div>
           </form>
         </div>
