making small adjustments in some css properties

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <h2 class="altSubtitle">Diferentes op&ccedil;&otilde;es &agrave; sua disposi&ccedil;&atilde;o para atender &agrave;s mais diversas necessidades
               de transporte</h2>
           </div>
-          <div class="row conver-inner-page">
+          <div class="row cover-inner-page">
             <div class="col-md-6">
               <img class="img-responsive" src="images/cover/map.png">
             </div>
